# game_dev_practice

./: .gitignore  CMakeLists.txt  README.md  README.txt
SFML_games/: CHK_SFML_eng.cpp  CHK_SFML_eng.h  CHK_SFML_eng_game.cpp  CHS_SFML_eng.cpp  CHS_SFML_eng.h  CHS_SFML_eng_game.cpp  CMakeLists.txt  CRG_SFML_eng.cpp  CRG_SFML_eng.h  README.txt  TTT_wt_but_XYQ.cpp  TTT_wt_but_XYQ.h  TikTakTok.cpp  TikTakTok.h  cardReact.cpp  cardReact.h  checkers.cpp  checkers.h  checkers_tests.cpp  chess.cpp  chess.h  decision_tree.pptx
SFML_utils/: CMakeLists.txt  README.txt  SFML_HPBar_XYQ.cpp  SFML_HPBar_XYQ.h  SFML_TxtBox_XYQ.cpp  SFML_TxtBox_XYQ.h  SFML_button_XYQ.cpp  SFML_button_XYQ.h  SFML_infoBox_XYQ.cpp  SFML_infoBox_XYQ.h  SFML_obj_XYQ.cpp  SFML_obj_XYQ.h  SFML_page_XYQ.cpp  SFML_page_XYQ.h  SFML_utils_XYQ.cpp  SFML_utils_XYQ.h
docs/: button_designs.pptx  chess_structure.pptx  game_plan_react_time.pptx  ~$chess_structure.pptx
src/: dud.cpp  dud.h  main.cpp
tests/: CMakeLists.txt  HPBar_test.cpp  HPBar_test.h  button_test.cpp  button_test.h  chess_test.cpp  chess_test.h  infoBox_test.cpp  infoBox_test.h  pageObj_test.cpp  pageObj_test.h  txtBox_test.cpp  txtBox_test.h  window_test.cpp  window_test.h
utils_XYQ/: CMakeLists.txt  numUtils.cpp  numUtils.h  timeUtils.cpp  timeUtils.h
