


set( SFML_utils_HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_utils_XYQ.h
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_obj_XYQ.h
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_button_XYQ.h
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_HPBar_XYQ.h
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_TxtBox_XYQ.h
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_infoBox_XYQ.h
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_page_XYQ.h
	${CMAKE_CURRENT_SOURCE_DIR}/magic_enum.hpp
)

set( SFML_utils_SOURCE 
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_utils_XYQ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_obj_XYQ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_button_XYQ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_HPBar_XYQ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_TxtBox_XYQ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_infoBox_XYQ.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SFML_page_XYQ.cpp
)


add_library(SFML_utils ${SFML_utils_HEADERS} ${SFML_utils_SOURCE})

target_link_libraries( SFML_utils PRIVATE sfml-graphics )


